<resources>
    <string name="app_name">Github User</string>

    <!-- Toolbar -->
    <string name="toolbar_headline_1_text">Find your developers to make the world more intelligent!</string>
    <string name="toolbar_headline_2_text">23.4 million more developers available around the world</string>

    <!-- Menu Item -->
    <string name="menu_item_about_me_text">About Me</string>
    <string name="menu_item_search_text">Search</string>

    <!-- User Item Layout Dummy Data -->
    <string name="item_user_company_name">Gojek Indonesia</string>
    <string name="item_user_username">rllyhz</string>
    <string name="item_user_name">Rully Ihza Mahendra</string>
    <string name="item_user_location">Indonesia</string>

    <!-- Transition Names -->
    <string name="transition_name_item_user_avatar">item_user_avatar</string>
    <string name="transition_name_item_user_name">item_user_name</string>

    <!-- User Detail Layout Dummy Data -->
    <string name="user_detail_username_label">Username :</string>
    <string name="user_detail_company_name_label">Company Name :</string>
    <string name="user_detail_location_label">Location :</string>
    <string name="user_detail_repository_count_label">Repositories :</string>
    <string name="user_detail_repository_count_text">240</string>
    <string name="user_detail_followers_label">Followers</string>
    <string name="user_detail_followers_count_text">240</string>
    <string name="user_detail_followings_label">Followings</string>
    <string name="user_detail_followings_count_text">210</string>

    <string name="content_description_image">Image Preview</string>
    <string name="content_description_icon">Icon Preview</string>

    <string name="about_me_email_text">rullyihza00@gmail.com</string>
    <string name="about_me_work_text">Mahasiswa</string>
    <string name="about_me_birth_date_text">29 September 1999</string>
    <string name="about_me_linkedin_text">Rully Ihza Mahendra</string>
    <string name="about_me_github_text">rllyhz</string>
    <string name="about_me_instagram_text">rllyhz</string>
    <string name="about_me_copyright_text">© All rights reserved.</string>

    <string name="linkedin_link">https://www.linkedin.com/in/rully-ihza-mahendra-275a591a5</string>
    <string name="instagram_link">https://www.instagram.com/rllyhz/</string>
    <string name="github_link">https://www.github.com/rllyhz/</string>

    <string name="feedback_empty_text">Sorry, the result not found!</string>
    <string name="feedback_error_text">Sorry, something went wrong.</string>
    <string name="about_me_name_text">Rully Ihza Mahendra</string>

</resources>