<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_item_user_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeableImageCircular"
            tools:srcCompat="@drawable/user1"
            tools:transitionName="@string/transition_name_item_user_avatar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_user_name"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_item_user_avatar"
            app:layout_constraintTop_toTopOf="@+id/iv_item_user_avatar"
            tools:text="@string/item_user_name"
            tools:transitionName="@string/transition_name_item_user_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_item_user_username"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/tv_item_user_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_user_name"
            tools:text="@string/item_user_username" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="@+id/tv_item_user_username"
            app:layout_constraintTop_toBottomOf="@+id/tv_item_user_username"
            app:srcCompat="@drawable/ic_office_building" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtv_item_user_company_name"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            tools:text="@string/item_user_company_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>