<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            tools:title="@string/app_name" />


        <FrameLayout
            android:id="@+id/fl_user_detail_profile_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@drawable/bg_user_detail"
                android:contentDescription="@string/app_name" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/mtv_user_detail_name"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:transitionName="@string/transition_name_item_user_name" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/siv_user_detail_avatar"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="68dp"
                android:contentDescription="@string/app_name"
                android:transitionName="@string/transition_name_item_user_avatar"
                app:shapeAppearanceOverlay="@style/ShapeableImageCircular"
                tools:srcCompat="@drawable/user1" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll_user_detail_followers_followings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@id/fl_user_detail_profile_container">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mtv_user_detail_total_followings"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="?attr/colorSecondary"
                        tools:text="@string/user_detail_followings_count_text" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_detail_followings_label" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mtv_user_detail_total_followers"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="?attr/colorSecondary"
                        tools:text="@string/user_detail_followers_count_text" />

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_detail_followers_label" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_user_detail_followers_followings_container" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/iv_user_detail_username_icon"
                    android:layout_width="@dimen/user_detail_icon_size"
                    android:layout_height="@dimen/user_detail_icon_size"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_user"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_user_detail_username"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/user_detail_username_label"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_user_detail_username_icon"
                    app:layout_constraintLeft_toRightOf="@id/iv_user_detail_username_icon"
                    app:layout_constraintTop_toTopOf="@+id/iv_user_detail_username_icon" />

                <ImageView
                    android:id="@+id/iv_user_detail_company_icon"
                    android:layout_width="@dimen/user_detail_icon_size"
                    android:layout_height="@dimen/user_detail_icon_size"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_office_building"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_user_detail_username_icon" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_user_detail_company_name"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/user_detail_company_name_label"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_user_detail_company_icon"
                    app:layout_constraintLeft_toRightOf="@id/iv_user_detail_company_icon"
                    app:layout_constraintTop_toTopOf="@+id/iv_user_detail_company_icon" />

                <ImageView
                    android:id="@+id/iv_user_detail_repository_count_icon"
                    android:layout_width="@dimen/user_detail_icon_size"
                    android:layout_height="@dimen/user_detail_icon_size"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_folder"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_user_detail_company_icon" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtv_user_detail_repository_count"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/user_detail_repository_count_label"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_user_detail_repository_count_icon"
                    app:layout_constraintLeft_toRightOf="@id/iv_user_detail_repository_count_icon"
                    app:layout_constraintTop_toTopOf="@+id/iv_user_detail_repository_count_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>